--- a/PlayingAround.ipynb
+++ b/PlayingAround.ipynb
@@ -21,11 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "/home/nabeel/anaconda3/envs/nyu/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-=======
       "/home/brian/anaconda3/envs/dota_project/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
->>>>>>> brian
       "  warnings.warn(msg, category=DeprecationWarning)\n"
      ]
     },
@@ -1002,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1007,7 @@
        "(42,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1027,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=uint8)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,110 +1038,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]), array([[ 0,  1],\n",
-       "        [ 1,  2],\n",
-       "        [ 2,  3],\n",
-       "        [ 3,  4],\n",
-       "        [ 4,  5],\n",
-       "        [ 6,  7],\n",
-       "        [ 7,  8],\n",
-       "        [ 8,  9],\n",
-       "        [ 9, 10],\n",
-       "        [10, 11],\n",
-       "        [12, 13],\n",
-       "        [13, 14],\n",
-       "        [14, 15],\n",
-       "        [15, 16],\n",
-       "        [16, 17],\n",
-       "        [18, 19],\n",
-       "        [19, 20],\n",
-       "        [20, 21],\n",
-       "        [21, 22],\n",
-       "        [22, 23],\n",
-       "        [24, 25],\n",
-       "        [25, 26],\n",
-       "        [26, 27],\n",
-       "        [27, 28],\n",
-       "        [28, 29],\n",
-       "        [30, 31],\n",
-       "        [31, 32],\n",
-       "        [32, 33],\n",
-       "        [33, 34],\n",
-       "        [34, 35],\n",
-       "        [36, 37],\n",
-       "        [37, 38],\n",
-       "        [38, 39],\n",
-       "        [39, 40],\n",
-       "        [40, 41],\n",
-       "        [ 0,  6],\n",
-       "        [ 1,  7],\n",
-       "        [ 2,  8],\n",
-       "        [ 3,  9],\n",
-       "        [ 4, 10],\n",
-       "        [ 5, 11],\n",
-       "        [ 6, 12],\n",
-       "        [ 7, 13],\n",
-       "        [ 8, 14],\n",
-       "        [ 9, 15],\n",
-       "        [10, 16],\n",
-       "        [11, 17],\n",
-       "        [12, 18],\n",
-       "        [13, 19],\n",
-       "        [14, 20],\n",
-       "        [15, 21],\n",
-       "        [16, 22],\n",
-       "        [17, 23],\n",
-       "        [18, 24],\n",
-       "        [19, 25],\n",
-       "        [20, 26],\n",
-       "        [21, 27],\n",
-       "        [22, 28],\n",
-       "        [23, 29],\n",
-       "        [24, 30],\n",
-       "        [25, 31],\n",
-       "        [26, 32],\n",
-       "        [27, 33],\n",
-       "        [28, 34],\n",
-       "        [29, 35],\n",
-       "        [30, 36],\n",
-       "        [31, 37],\n",
-       "        [32, 38],\n",
-       "        [33, 39],\n",
-       "        [34, 40],\n",
-       "        [35, 41]]), array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train_edge_features[0]"
+    "len(np.unique(np.hstack([y.ravel() for y in Y])))"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-=======
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
@@ -1285,7 +1186,6 @@
   },
   {
    "cell_type": "code",
->>>>>>> brian
    "execution_count": null,
    "metadata": {},
    "outputs": [],
